# clickd

./: Cargo.toml  README.md  clickd.service  config.example.toml
src/: config.rs  main.rs  systray.rs
