[package]
name = "clickd"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.70"
cpal = "0.16.0"
hound = "3.5.1"
serde = { version = "1.0.160", features = ["derive"] }
toml = "0.8.22"
ksni = "0.2.0" # (not at 0.3 because zbus is a far more frustrating dependency than dbus)
png = "0.17.8"
evdevil = { version = "0.1.2", features = ["serde"] }
