[package]
name = "clickd"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.70"

cpal = { version = "0.18.1", features = ["pipewire"] }
resampler = "0.5.1"
hound = "3.5.1"

serde = { version = "1.0.160", features = ["derive"] }
toml = { version = "1.1.2", default-features = false, features = ["serde", "parse"] }

ksni = "0.2.0" # (not at 0.3 because zbus is a far more frustrating dependency than dbus)
png = "0.18.1"

evdevil = { version = "0.5.0", default-features = false, features = ["serde"] }
